# revcyclemgmt-app-shell

./: .gitignore  COMPLIANCE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ticket-1-source-of-truth.md  website-card-copy.md
output_demo/: app_shell_summary.json  claims_pipeline_mapper_summary.json  clearinghouse_responses_summary.json  edi_validation_summary.json  rcm_dashboard_summary.json
revcyclemgmt-demo/: AGENTS.md  DEMO_AUDIT_2026-05-12.md  DEMO_PLAYBOOK_2026-05-15.md  README.md  package-lock.json  package.json  tailwind.config.ts
revcyclemgmt-demo/app/: globals.css  layout.tsx  page.tsx
revcyclemgmt-demo/app/demo/: page.tsx
revcyclemgmt-demo/app/demo/[scenarioId]/claim/: page.tsx
revcyclemgmt-demo/app/demo/[scenarioId]/coding/: page.tsx
revcyclemgmt-demo/app/demo/[scenarioId]/complete/: page.tsx
revcyclemgmt-demo/components/pipeline/: ClaimTable.tsx  ClinicalNote.tsx  Cms1500Form.tsx  Cms1500PdfDocument.tsx  CodeCard.tsx  GeneratePdfButton.tsx  PatientCard.tsx  RemittanceCard.tsx  StepIndicator.tsx  SubmissionTimeline.tsx  TeachingNotePanel.tsx  X12EdiDisplay.tsx
revcyclemgmt-demo/components/ui/: button.tsx  card.tsx  tabs.tsx
revcyclemgmt-demo/lib/claims/: form-data.ts
revcyclemgmt-demo/lib/scenarios/: index.ts  scenario-01-preventive-htn.ts  scenario-02-laceration.ts  types.ts
src/revcyclemgmt_app_shell/: __init__.py  artifacts.py  claims_pipeline.py  clearinghouse_responses.py  dashboard.py  data.py  edi_validation.py  privacy.py  server.py  views.py  workspace.py
tests/: test_app_shell.py
(+3 files in other folders)
