[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "revcyclemgmt-app-shell"
version = "0.1.0"
description = "No-PHI RevCycleMGMT app shell and launch workspace proof."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.scripts]
rcm-app-shell-artifacts = "revcyclemgmt_app_shell.artifacts:main"
rcm-app-shell-server = "revcyclemgmt_app_shell.server:main"

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]
